--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions: 
-      java: corretto17
+    runtime-versions:  
+      java: corretto17 # https://docs.aws.amazon.com/codebuild/latest/userguide/runtime-versions.html
     pre_build:
       commands:
         - echo Nothing to do in this phase
@@ -18,5 +18,5 @@ phases:
 
 artifacts:
   files:
-    - target/**/*.jar
+    - target/*.jar
   discard-paths: yes
